--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/cors": "^4.0.0",
     "@pinecone-database/pinecone": "^0.0.14",
     "axios": "^1.4.0",
     "cheerio": "1.0.0-rc.12",
     "dotenv": "^16.1.4",
     "koa": "^2.14.2",
     "koa-body": "^6.0.1",
+    "koa-logger": "^3.2.1",
     "koa-router": "^12.0.0",
     "koa-static": "^5.0.0",
     "langchain": "^0.0.71",
