--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@koa/cors": "^4.0.0",
     "@pinecone-database/pinecone": "^0.0.14",
     "axios": "^1.4.0",
+    "cheerio": "1.0.0-rc.12",
     "dotenv": "^16.1.4",
     "jsdom": "^22.1.0",
     "koa": "^2.14.2",
@@ -26,6 +27,7 @@
     "koa-static": "^5.0.0",
     "langchain": "^0.0.71",
     "marked": "^5.1.0",
+    "puppeteer": "^20.7.3",
     "turndown": "^7.1.2"
   },
   "devDependencies": {
