--- a/server/package.json
+++ b/server/package.json
@@ -6,28 +6,26 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --experimental-specifier-resolution=node --loader=dotenv/config index.mjs",
-    "ingest": "node scripts/ingest-data.js",
-    "crawler": "node scripts/vue-document-crawler.js"
+    "dev": "nodemon --experimental-specifier-resolution=node --loader=dotenv/config index.mjs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@koa/cors": "^4.0.0",
-    "@pinecone-database/pinecone": "^0.0.14",
+    "@pinecone-database/pinecone": "^0.1.6",
+    "apify-client": "^2.7.1",
     "axios": "^1.4.0",
-    "cheerio": "1.0.0-rc.12",
-    "dotenv": "^16.1.4",
+    "dotenv": "^16.3.1",
+    "ignore": "^5.2.4",
     "jsdom": "^22.1.0",
     "koa": "^2.14.2",
     "koa-body": "^6.0.1",
     "koa-logger": "^3.2.1",
     "koa-router": "^12.0.0",
     "koa-static": "^5.0.0",
-    "langchain": "^0.0.71",
+    "langchain": "^0.0.104",
     "marked": "^5.1.0",
-    "puppeteer": "^20.7.3",
     "turndown": "^7.1.2"
   },
   "devDependencies": {
