Enable prettier and tailwind support

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "autoprefixer": "^10.4.14",
     "langchain": "^0.0.71",
     "postcss": "^8.4.23",
+    "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
